--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -1,5 +1,5 @@
 <header>
-    <article class="hero pico-background-sand-50">
+    <article class="hero pico-background-azure-50">
         <nav class="container">
             <ul>
             </ul>
