--- a/src/css/pico.scss
+++ b/src/css/pico.scss
@@ -1,1 +1,1 @@
-@use "../../node_modules/@picocss/pico/scss/pico" with ($theme-color: "slate");
+@use "../../node_modules/@picocss/pico/scss/pico" with ($theme-color: "azure");
