--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,4 +2,5 @@
     background-position: center;
     background-size: cover;
     height: 200px;
+    background-color: var(--pico-background-color);
 }
